--- a/app/views/application/_kullanicipaneli2.html.erb
+++ b/app/views/application/_kullanicipaneli2.html.erb
@@ -16,7 +16,7 @@
 							</a>
 
 							<a href="/ilanver"  style="margin-left: 10px;" type="button"
-							class="panellinkler col-xs-3  col-sm-2 btn btn-info">
+							class=" col-xs-3  col-sm-2 btn btn-info">
 								<span style="">İlan Ver</span>
 							</a>
 							
@@ -32,7 +32,7 @@
 
 
 							<a href="/mesajlarim" type="button"
-							class="panellinkler col-xs-3 col-sm-2 btn btn-info">
+							class=" col-xs-3 col-sm-2 btn btn-info">
 								<span style="font-size:11px;">Mesajlarım</span>
 							</a>
 							
@@ -56,11 +56,11 @@
 							</a>
 							
 							<a style="margin-left: 10px;" type="button" href="/firsatlar"
-							class="panellinkler col-xs-3 col-sm-2 btn btn-info">
+							class=" col-xs-3 col-sm-2 btn btn-info">
 								<span style="">Fırsatlar</span>
 							</a>
 
-							<a href="/kategoriler" style="margin-left:10px;" type="button" class="panellinkler col-xs-3 col-sm-2 btn btn-info">
+							<a href="/kategoriler" style="margin-left:10px;" type="button" class="col-xs-3 col-sm-2 btn btn-info">
 								<span style="font-size:10px;">Kategoriler</span>
 							</a>
 
@@ -82,7 +82,7 @@
 							</a>
 
 							<a href="/ilanver" style="margin-left: 10px;" type="button"
-							class="panellinkler col-sm-2 btn btn-info">
+							class=" col-sm-2 btn btn-info">
 								İlan Ver
 							</a>
 
@@ -93,7 +93,7 @@
 								Favorilerim
 							</a>
 							
-							<a href="/mesajlarim" style="margin-left: 10px;" type="button" class="panellinkler col-sm-2 btn btn-info">
+							<a href="/mesajlarim" style="margin-left: 10px;" type="button" class=" col-sm-2 btn btn-info">
 								Mesajlarım
 							</a>
 
@@ -119,11 +119,11 @@
 							</a>
 
 							<a href="/firsatlar" style="margin-left: 10px;" type="button"
-							class="panellinkler col-xs-3 col-sm-2 btn btn-info">
+							class=" col-xs-3 col-sm-2 btn btn-info">
 								<span style="">Fırsatlar Paneli</span>
 							</a>
 							
-							<a href="/kategoriler" style="margin-left: 10px;" type="button" class="panellinkler col-xs-3 col-sm-2 btn btn-info">
+							<a href="/kategoriler" style="margin-left: 10px;" type="button" class=" col-xs-3 col-sm-2 btn btn-info">
 								<span style="">Kategoriler</span>
 							</a>
 
@@ -149,7 +149,7 @@
 								<span style="">Fırsatlar Paneli</span>
 							</a>
 							
-							<a type="button" class="panellinkler col-xs-3 col-sm-2 btn btn-info">
+							<a href="/kategoriler" type="button" class="panellinkler col-xs-3 col-sm-2 btn btn-info">
 								<span style="">Kategoriler</span>
 							</a>
 						</div>
