--- a/app/views/user/member.html.erb
+++ b/app/views/user/member.html.erb
@@ -828,7 +828,7 @@
 
 												<div style="padding:20px;">
 
-													Şuanda favori ilanınız bulunmamaktadır!!
+													Şuanda ilanınız bulunmamaktadır!!
 
 												</div>
 
