--- a/app/views/advert/kategoriler.html.erb
+++ b/app/views/advert/kategoriler.html.erb
@@ -338,11 +338,9 @@
 										<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
 
 											<div class="thumbnail">
-												<a href="<%= advert.href %>"> <% if advert.images == [] %>
-												<%= image_tag Image.new.imagefile,title:advert.name,class: "masterTooltip" %>
-												<% else %>
-												<%= image_tag advert.images[0].imagefile(:small),title:advert.name,class: "masterTooltip" %>
-												<% end %> </a>
+												<a href="<%= advert.href %>"> 
+												<%= image_tag advert.pimage.imagefile(:small),title:advert.name,class: "masterTooltip" %>
+												 </a>
 
 											</div>
 
@@ -425,11 +423,9 @@
 							<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
 
 								<div class="thumbnail">
-									<a href="<%= advert.href %>"> <% if advert.images == [] %>
-									<%= image_tag Image.new.imagefile %>
-									<% else %>
-									<%= image_tag advert.images[0].imagefile(:small) %>
-									<% end %> </a>
+									<a href="<%= advert.href %>">
+									<%= image_tag advert.pimage.imagefile(:small) %>
+									</a>
 								</div>
 
 								<div class="caption">
@@ -513,11 +509,9 @@
 							<div class="col-lg-3 col-xs-6 col-md-4 col-sm-4">
 
 								<div style="" class="thumbnail">
-									<% if advert.images != [] %>
-									<a href="<%= advert.href %>"> <%= image_tag advert.images[0].imagefile(:small),:title => advert.name,class: "masterTooltip" %></a>
-									<% else %>
-									<a href="<%= advert.href %>"> <%= image_tag Image.new.imagefile ,:title => advert.name,class: "masterTooltip"   %></a>
-									<% end %>
+									
+									<a href="<%= advert.href %>"> <%= image_tag advert.pimage.imagefile(:small),:title => advert.name,class: "masterTooltip" %></a>
+									
 
 								</div>
 
@@ -592,11 +586,9 @@
 							<div class="col-lg-3 col-xs-6 col-md-4 col-sm-4">
 
 								<div style="" class="thumbnail">
-									<% if advert.images != [] %>
-									<a href="<%= advert.href %>"> <%= image_tag advert.images[0].imagefile(:small),:title => advert.name,class: "masterTooltip" %></a>
-									<% else %>
-									<a href="<%= advert.href %>"> <%= image_tag Image.new.imagefile ,:title => advert.name,class: "masterTooltip"   %></a>
-									<% end %>
+									
+									<a href="<%= advert.href %>"> <%= image_tag advert.pimage.imagefile(:small),:title => advert.name,class: "masterTooltip" %></a>
+									
 
 								</div>
 
